--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script>
-        const Hello = React.createElement('div', null, 'Hello World');
+        const Title = React.createElement('div', {
+            className: 'title' 
+        }, 'React tutorials');
+        const Image = React.createElement('img', {
+            src: 'http://lorempixel.com/400/200'
+        });
+        const App = React.createElement('div', null, Title, Image);
         const root = document.getElementById('root');
-        ReactDOM.render(Hello, root);
+        ReactDOM.render(App, root);
     </script>
 </body>
 </html>
